--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
     <header>
         <h1>Yousef Abdelsadek</h1>
+
+        <img src="./IMG_9539.jpg" width="300" alt="Photo of me">
         <h2>Web Developer</h2>
         <p>
             Hey there! I'm Yousef, a self-taught web developer with a passion for crafting awesome digital experiences. You see, my journey into web development wasn't your traditional one. I didn't have a fancy degree hanging on my wall. Instead, I rolled up my sleeves, dove headfirst into online tutorials, and taught myself the ins and outs of coding.
@@ -38,6 +40,7 @@
         <h2>Work Experience</h2>
         <article>
             <h3>Walmart</h3>
+            <h5>July 5th 2020 - December 18th 2021</h5>
             <ul>
                 <li>Stocked Shelves</li>
                 <li>Maintained food products and produce</li>
@@ -46,6 +49,7 @@
         </article>
         <article>
             <h3>RP Management</h3>
+            <h5>July 5th 2020 - Present</h5>
             <ul>
                 <li>Front desk manager and leasing consultant</li>
                 <li>Assisted clients in finding suitable apartments</li>
@@ -70,8 +74,6 @@
     </section>
 
     <hr>
-
-    <img src="./IMG_9539.jpg" width="300" alt="Photo of me">
 
     <footer>
         <p>© 2018 KingYousef</p>
